# Flask-App

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  test.py
src/example_pkg_Sunstorm.egg-info/: PKG-INFO  SOURCES.txt
src/flask_sqlite/: app.py
src/flask_sqlite.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/flask_sqlite/templates/: db.html  file.html  index.html
src/flask_sqllite/: app.py
src/flask_sqllite/templates/: index.html
tests/: test_app.py
