[metadata]
name = flask_sqlite
version = 0.0.1
author = Krish Ghiya
author_email = krish.ghiya@sjsu.edu
description = Flask Dashboard to interface with DataFrames.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/krishghiya/Flask-App
project_urls =
    Bug Tracker = https://github.com/krishghiya/Flask-App/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src